2015-12-06  oblivion  <oblivion@linda_lee>

	* serverhud/ws: Origin check is back.
	* tests/full-sys: Configured for origin check.
	* tests/full-sys: Update README

2015-12-04  oblivion  <oblivion@linda_lee>

	* serverhud/ws/access.py: Better logging and error handling.
	* serverhud/ws/remote_host.py: Better logging and error handling.
	* tests/full-sys/Vagrantfile: Stop some provisioning step from running each time.

2015-12-03  oblivion  <oblivion@linda_lee>

	* .gitignore: Simplify.
    * build_pip.sh: Script to build a Python package.
    * develop.sh: Script to install Server HUD in development mode.
    * Makefile: Builds the Python package.
    * Manifest.in: Added to also install non python files.
    * README.md: Updated.
    * README.rst: Description for the Python package.
    * setup.py: Added with packaging information.
    * version: Added with package version.
    * Moved all Python code into serverhud/
    * Added entry points in scripts/
    * Added full system test in tests/full-sys
    * Added systemd service files in systemsd/
    * Client:
	   * Get configuration file from environment variable.
	   * Remove probe code that is now handled by the WebSocker server.


2015-08-13  oblivion  <oblivion@case>

	* app/__init__.py: Logging using flask.
	* app/views.py: Logging using flask.

2015-08-06  oblivion  <oblivion@case>

	* app/static/css/dashboard.css: Lots of responsive stuff.
	* app/templates/index.html: Fixed rest url for receive speed.
								Update remote host name if connections is greater than last run.
								Added footer.
								Lots of responsive stuff.
								REST servers are configured in config.py
	* config.py: Added SERVICES.
				 Added ALLOWED.
				 Added HOSTS.
	* app/views.py: Added dynamic building of URLs.
				    Reverted speed functions to get local values.
				    Added CORS to all the REST.
				    Count connections on all ports if asked.
				    Return IP is name resolution fails.
				    Adding http:// to ALLOWED.
